tests/gabc-dump/should-fail/bad-hepisema-3.gabc
name: bad horizontal episema (3);
%%
(c3) g(g__)
